--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
 
             <div class="title">Stalen ramen?</div>
             <ul><li>
-            <h2><a href="https://raamendeuronline.nl/het-ranke-stalen-raam-wordt-stijlicoon" target="_blank">Ranke
+            <h2><a href="https://raamendeuronline.nl/het-ranke-stalen-raam-wordt-stijlicoon" target="_blank">Het ranke
                     stalen
                     raam wordt stijlicoon</a><br>
             </h2>
