--- a/src/index.html
+++ b/src/index.html
@@ -53,7 +53,9 @@
                 men moeten renoveren, en dat kan heden ten dage.
                 Zie <a href='http://www.madamemarlie.nl/stalen-kozijnen-isoleren-prima/'>Madame Marlie</a>.
             </h2>
-
+            <h2>
+                zie ook <a href="https://www.profel.nl/kozijnen/aluminium-kozijnen/">hier</a>
+            </h2>
         </li></ul>
 
         </div>
