--- a/src/index.html
+++ b/src/index.html
@@ -49,12 +49,9 @@
                     Leidschendam</a>
             </h2>
             </li><li>
-            <h2>De stalen ramen op Lijsterbeslaan 39 hebben dubbel glas gekregen, maar wil men isolatie à la 2022 zal
+            <h2>De stalen ramen op Lijsterbeslaan 39 hebben dubbel glas gekregen, maar wil men isolatie à la 2023 zal
                 men moeten renoveren, en dat kan heden ten dage.
-                Zie <a href='http://www.madamemarlie.nl/stalen-kozijnen-isoleren-prima/'>Madame Marlie</a>.
-            </h2>
-            <h2>
-                zie ook <a href="https://www.profel.nl/kozijnen/aluminium-kozijnen/">hier</a>
+                zie <a href="https://www.profel.nl/kozijnen/aluminium-kozijnen/">hier</a>
             </h2>
         </li></ul>
 
