--- a/src/index.html
+++ b/src/index.html
@@ -50,12 +50,11 @@
             </h2>
             </li><li>
             <h2>De stalen ramen op Lijsterbeslaan 39 hebben dubbel glas gekregen, maar wil men isolatie à la 2023 zal
-                men moeten renoveren, en dat kan heden ten dage.
+                men moeten renoveren 
                 zie <a href="https://www.profel.nl/kozijnen/aluminium-kozijnen/">hier</a>
 
-                zie <a href="https://www.provilla.nl">hier</a>
+                of <a href="https://www.provilla.nl">hier</a>
 
-                /*niet vermelden , openslaande deuren 7000 euro raam kamer wineke ook duur, totaao 70.000 euro Gertjan Scheper gj.scheper@provilla.nl  */
             </h2>
         </li></ul>
 
