--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
                 </li>
                 <li>
                     <h2>Originele bouwtekening Trappenburg aanwezig, zie <a href="./images/architect_trappenburg.pdf"
-                            target="_blank">onze bouwtekening</a></h2>
+                            target="_blank">zie plan, volledige tekening beschikbaar!</a></h2>
                 </li>
                 <li>
                     <h2>Stijl van Cornelis Trappenburg: combinatie van Amsterdamse School en W.M. Dudok, zie <a
