--- a/src/index.html
+++ b/src/index.html
@@ -49,11 +49,11 @@
                     Leidschendam</a>
             </h2>
             </li><li>
-            <h2>De stalen ramen op Lijsterbeslaan 39 hebben dubbel glas gekregen, maar wil men isolatie à la 2023 zal
+            <h2>De stalen ramen in de woonkamer hebben dubbel glas gekregen, maar wil men isolatie à la 2023 zal
                 men moeten renoveren 
-                zie <a href="https://www.profel.nl/kozijnen/aluminium-kozijnen/">hier</a>
+                zie <a href="https://www.profel.nl/kozijnen/aluminium-kozijnen/">Profel</a>
 
-                of <a href="https://www.provilla.nl">hier</a>
+                of <a href="https://www.provilla.nl">Provilla</a>
 
             </h2>
         </li></ul>
